[package]
name = "cfapi-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.11"
autocxx = "0.26.0"
crossbeam-channel = "0.5.12"
cxx = "1.0"
dashmap = { version = "5.5.3", features = ["serde"] }
once_cell = "1.19.0"
rmp-serde = "1.1.2"
rsolace = "0.1.6"
serde = { version = "1.0.197", features = ["serde_derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } 
