[package]
name = "cfapi"
version = "0.1.0"
edition = "2021"
description = "cfapi bindings for the Rust"
keywords = ["cfapi"]


[dependencies]
autocxx = "0.26.0"
cxx = "1.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
rmp-serde = "1.1.2"
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
autocxx-build = "0.26.0"
miette = { version = "5", features = ["fancy"] } 
