[package]
name = "cfvhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[lib]
name = "cfvhub"
path = "src/lib.rs"

[dependencies]
cfapi = {path = "../cfapi" }
ahash = "0.8.11"
autocxx = "0.26.0"
crossbeam-channel = "0.5.12"
cxx = "1.0"
dashmap = { version = "5.5.3", features = ["serde"] }
once_cell = "1.19.0"
rmp-serde = "1.1.2"
rsolace = "0.1.6"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
snafu = "0.8.2"
serde_yaml = "0.9.34"
toml = "0.8.12"
itertools = "0.12.1"

